manifests/github-explorer.yml
apiVersion: v1
kind: Namespace
metadata:
  name: github-explorer
---
apiVersion: v1
kind: Service
metadata:
  name: front
  namespace: github-explorer
  labels:
    app: github-explorer
    tier: front
spec:
  selector:
    app: github-explorer
    tier: front
  type: NodePort
  ports:
    - port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  namespace: github-explorer
  labels:
    app: github-explorer
    tier: front
spec:
  selector:
    matchLabels:
      app: github-explorer
      tier: front
  replicas: 1
  template:
    metadata:
      labels:
        app: github-explorer
        tier: front
    spec:
      containers:
        - name: github-explorer
          image: mmontes11/github-explorer:0.3.1
          imagePullPolicy: Always
          resources:
            requests:
              memory: "32Mi"
              cpu: "75m"
            limits:
              memory: "64Mi"
              cpu: "125m"
          ports:
            - containerPort: 80
